# spanned-json-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parsing.rs
crates/parser/src/: error.rs  input.rs  lib.rs  parser.rs  ser.rs  value.rs
crates/parser/tests/: parser.rs
src/: error.rs  input.rs  lib.rs  parser.rs  ser.rs  value.rs
tests/: parser.rs
