[package]
name = "spanned_json_parser"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
description = "A Json parser that gives you the line and column number for each value"
authors = ["Jules Guesnon <guesnonj@outlook.fr>"]
categories = ["encoding", "parser-implementations", "parsing"]
keywords = ["json", "span", "line", "column", "parser"]
license = "MIT"
repository = "https://github.com/JulesGuesnon/spanned-json-parser"
exclude = ["benches/"]

[dependencies]
nom = "7"
memchr = "2.6.4"
serde = "1.0.190"
bytecount = "0.6.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing"
path = "benches/paring.rs"
harness = false
